tests/suite/annotations/fail/annfail05/annfail05.cabal
name: annfail05
version: 1.0
build-type: Simple
cabal-version: >= 1.2

library
    build-depends: base
    exposed-modules: Annfail05
                     Annfail05_Help
